--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -7,7 +7,7 @@ sonar.organization=dbo1001
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 #sonar.sources=.
-sonar.sources=UBU-TFG-Medidor-estadistico-metajuego-Magic-The-Gathering/src/
+#sonar.sources=UBU-TFG-Medidor-estadistico-metajuego-Magic-The-Gathering/src/
 sonar.java.binaries=UBU-TFG-Medidor-estadistico-metajuego-Magic-The-Gathering/build/web/WEB-INF/lib/
 
 # Encoding of the source code. Default is default system encoding
