--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -6,7 +6,7 @@ sonar.organization=dbo1001
 #sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
-#sonar.sources=UBU-TFG-Medidor-estadistico-metajuego-Magic-The-Gathering/src/
+sonar.sources=src/
 sonar.java.binaries=build/web/WEB-INF/lib/
 
 # Encoding of the source code. Default is default system encoding
