--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -3,7 +3,7 @@ sonar.organization=dbo1001
 
 # This is the name and version displayed in the SonarCloud UI.
 #sonar.projectName=UBU-TFG-Medidor-estadistico-metajuego-Magic-The-Gathering
-#sonar.projectVersion=1.0
+sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
 sonar.sources=src/
