--- a/sonar-project.properties
+++ b/sonar-project.properties
@@ -2,7 +2,7 @@ sonar.projectKey=dbo1001_UBU-TFG-Medidor-estadistico-metajuego-Magic-The-Gatheri
 sonar.organization=dbo1001
 
 # This is the name and version displayed in the SonarCloud UI.
-#sonar.projectName=UBU-TFG-Medidor-estadistico-metajuego-Magic-The-Gathering
+sonar.projectName=UBU-TFG-Medidor-estadistico-metajuego-Magic-The-Gathering
 sonar.projectVersion=1.0
 
 # Path is relative to the sonar-project.properties file. Replace "\" by "/" on Windows.
